--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+    <mat-sidenav #drawer style="border-right: 1px solid #907220;" class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
         <mat-toolbar style="height: 120px; display: flex; align-items: center; padding: 0; justify-content: center;">
-            <img height="80px" src="/assets/images/allweb.png" alt="#">
+            <img height="80px" src="/assets/images/allweb.png" alt="#" routerLink="">
         </mat-toolbar>
         <mat-nav-list>
             <a mat-list-item routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -83,7 +83,18 @@
             </button>
             <ul style="list-style-type: none;">
                 <li>
-                    profile
+                    <button mat-button [matMenuTriggerFor]="menu" style="height: 66px;">
+                      <!-- <mat-icon>account_circle</mat-icon> -->
+                      <div style="display: flex; align-items: center">
+                        <img height="30px" width="30px" style="border: 2px solid #F89926; border-radius: 30px;" src="https://th.bing.com/th/id/OIP.GlXqxcR9EmviN5kuwaUsMQHaIB?pid=ImgDet&rs=1" alt="#">
+                        <h6 style="margin-left: 10px;">Admin</h6>
+                      </div>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item routerLink="/employee/detail/1">My profile</button>
+                        <button mat-menu-item routerLink="/change password">Setting</button>
+                        <button mat-menu-item routerLink="/logout">Logout</button>
+                    </mat-menu>
                 </li>
             </ul>
         </mat-toolbar>
