--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mat-dialog-container {
+    margin-top: 30px !important;
+}
+
+a {
+    color: rgb(74, 77, 81);
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(132, 131, 131);
+}
