--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="loginStatus; else loginForm">
     <app-navigation *ngIf="userRole == 'RECRUITER_ROLE' || userRole == 'ADMIN_ROLE'"></app-navigation>
-    <app-attendance *ngIf="userRole == 'USER_ROLE'"></app-attendance>
+    <app-navigation-user *ngIf="userRole == 'USER_ROLE'"></app-navigation-user>
 </div>
 <ng-template #loginForm>
     <router-outlet></router-outlet>
