--- a/src/app/component/forgot-password/forgot-password.component.html
+++ b/src/app/component/forgot-password/forgot-password.component.html
@@ -1,4 +1,36 @@
-<mat-toolbar style="background-color: #FFE599; color: white; display: flex; justify-content: center; align-items: center; border-bottom: 1px solid black;">
+<mat-toolbar
+    style="background-color: #FFE599; color: white; display: flex; justify-content: center; align-items: center; border-bottom: 1px solid black;">
     <img height="60px" src="/assets/images/allweb.png" alt="#" routerLink="">
 </mat-toolbar>
-<div style="height: 91%; background-color: #fafafa; display: flex; justify-content: center; align-items: center;">Login</div>
+<div
+    style="height: 91%; background-color: #fafafa; display: flex; justify-content: center; align-items: center; position: relative">
+
+
+    <div class="center-content">
+
+        <div class="container">
+            <img class="img-login" src="../../../assets/images/forgetpassword.svg" alt="" style="width: 28em">
+
+            <div class="right-section">
+                <mat-card style="width: 60%">
+
+                    <h1 style="text-align: center; font-weight: bold">Forgot Password</h1>
+                    <p>Enter your email below to get a reset link to change password</p>
+
+                    <mat-form-field appearance="outline" class="full-width top-margin">
+
+                        <mat-label>Email</mat-label>
+                        <input type=" email" required matInput placeholder="Email" value="">
+                    </mat-form-field>
+                    <button type="button" mat-raised-button color="primary" class="btn-submit">Submit</button>
+                </mat-card>
+
+
+            </div>
+
+
+
+
+        </div>
+    </div>
+</div>
