--- a/src/app/navigation-user/navigation-user.component.html
+++ b/src/app/navigation-user/navigation-user.component.html
@@ -26,7 +26,7 @@
                         </a>
                     </mat-list-item>
                     <mat-list-item>
-                        <a style="margin-left: -16px; padding: 10px 6rem 10px 16px" routerLink="/employee/leave" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a style="margin-left: -16px; padding: 10px 6rem 10px 16px" routerLink="/employee/leave/apply" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h3>Leave</h3>
                         </a>
