--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -1,1 +1,58 @@
-<p>leave-user works!</p>
+<div>
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Leave</h1>
+        <button mat-raised-button (click)="openDialog()" color="primary">Apply Leave</button>
+    </div>
+    <div style="display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Leave</h4>
+    </div>
+</div>
+
+<div style=" font-size: 30px">
+    <mat-card
+        style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 2.5em;width: 5em;">
+        <div>Total</div>
+        <div>100</div>
+    </mat-card>
+</div>
+
+<!--Table SECTION-->
+
+<div class="mat-elevation-z8" style="margin-top: 2em">
+    <table mat-table [dataSource]="dataSource" style="width: 100%;">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Leave Type Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> LeaveType </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef> From </th>
+            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef> To </th>
+            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
+</div>
