--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -11,48 +11,70 @@
     </div>
 </div>
 
-<div style=" font-size: 30px">
-    <mat-card
-        style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 2.5em;width: 5em;">
-        <div>Total</div>
-        <div>100</div>
-    </mat-card>
-</div>
+<div style="padding: 2em;">
+    <div style="display: flex; justify-content: space-between;align-items: center; ">
 
-<!--Table SECTION-->
-
-<div class="mat-elevation-z8" style="margin-top: 2em">
-    <table mat-table [dataSource]="dataSource" style="width: 100%;">
-
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
-
-        <!-- Leave Type Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> LeaveType </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> From </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef> To </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
+        <mat-card
+            style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
+            <div style="font-size: 1.5em; font-weight: 500">Total</div>
+            <div style="font-size: 1.5em; font-weight: 400">100</div>
+        </mat-card>
+        <mat-card
+            style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
+            <div style="font-size: 1.5em; font-weight: 500">Total</div>
+            <div style="font-size: 1.5em; font-weight: 400">100</div>
+        </mat-card>
+        <mat-card
+            style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
+            <div style="font-size: 1.5em; font-weight: 500">Total</div>
+            <div style="font-size: 1.5em; font-weight: 400">100</div>
+        </mat-card>
+        <mat-card
+            style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
+            <div style="font-size: 1.5em; font-weight: 500">Total</div>
+            <div style="font-size: 1.5em; font-weight: 400">100</div>
+        </mat-card>
 
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    </div>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
-    </mat-paginator>
+    <!--Table SECTION-->
+
+    <div class="mat-elevation-z2" style="margin-top: 2em;">
+        <table mat-table [dataSource]="dataSource" style="width: 100%;">
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+
+            <!-- Leave Type Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> LeaveType </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef> From </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+                <th mat-header-cell *matHeaderCellDef> To </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
 </div>
