--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -1,1 +1,42 @@
-<p>change-password works!</p>
+<div>
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h1 class="mat-h1" style="font-weight: 500;">Setting</h1>
+    </div>
+    <div style="display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Change password</h4>
+    </div>
+    <mat-card style="height: auto; margin: 15px; padding: 30px 30px;">
+        <mat-card-title>
+            <div style="margin-bottom: 1em">Change Password</div>
+        </mat-card-title>
+        <mat-card-content>
+            <div style="display: flex; flex-direction: row; align-items: center">
+                <div>
+                    <mat-form-field appearance="outline" style="width: 380px;">
+                        <mat-label>Old Password</mat-label>
+                        <input matInput [type]="hide ? 'password' : 'text'" type="password" placeholder="Input old password" [(ngModel)]="old_password" required>
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
+                </div>
+                <div style="margin-left: 20px;">
+                    <mat-form-field appearance="outline" style="width: 380px;">
+                        <mat-label>New Password</mat-label>
+                        <input matInput [type]="hide ? 'password' : 'text'" type="password" placeholder="Input new password" [(ngModel)]="new_password" required>
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div style="display: flex; flex-direction: row">
+                <button mat-button color="warn" style="height: 45px;">Cancel</button>
+                <button mat-raised-button style="background-color: #F89926; color: white; font-weight: 500; height: 45px;">Apply Change</button>
+            </div>
+        </mat-card-content>
+    </mat-card>
+</div>
