--- a/src/app/dashboard-user/dashboard-user.component.html
+++ b/src/app/dashboard-user/dashboard-user.component.html
@@ -1,40 +1,80 @@
 <div>
     <h1 class="mat-h1">Dashboard</h1>
 
-    <mat-card style="height: auto; margin: 15px;">
-        <mat-card-content style="display: flex; justify-content: space-between; align-items: center;">
-            <div class="mat-h1">Welcome USER name!</div>
+    <div style="height: auto; margin: 15px;">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div class="mat-h2" style="margin-top: 10px;">Welcome USER
+                <div>
+                    name!
+                </div>
+            </div>
             <div style="display: flex; justify-content: center; align-items: center">
                 <div style="display: flex; align-items: center; flex-direction: column;">
-                    <div>10:22 AM</div>
-                    <div>Check in at: 8:20 AM</div>
+                    <div>{{ time | date: "h:mm:ss a" }}</div>
+                    <div>
+                        {{ checkName }} at: {{ checkTime | date: "h:mm:ss a" }}
+                        <span *ngIf="!checkTime">N/A</span>
+                    </div>
                 </div>
                 <div style="margin-left: 20px;">
-                    <button mat-raised-button color="primary">
+                    <button *ngIf="checkType === 'in'" mat-raised-button color="primary" style="height: 60px;" (click)="checkIn()">
                       <mat-icon>keyboard_tab</mat-icon>
                       Check in
                     </button>
-                    <button mat-raised-button color="warn">
-                      <mat-icon>keyboard_return</mat-icon>
-                      Check out
-                    </button>
+
+                    <button *ngIf="checkType === 'out'" mat-raised-button color="warn" style="height: 60px; " (click)="checkOut() ">
+                        <mat-icon>keyboard_return</mat-icon>
+                        Check out
+                      </button>
                 </div>
             </div>
-        </mat-card-content>
-
-    </mat-card>
-    <mat-grid-list cols="2" rowHeight="350px">
-        <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-            <mat-card class="dashboard-card">
+        </div>
+    </div>
+    <div style="display: flex; flex-direction: row;">
+        <div style="width: 50%;">
+            <mat-card style="height: auto; margin: 15px;">
+                <div style="display: flex; align-items: center; flex-direction: row; border-bottom: 1px solid black;  margin-bottom: 10px;">
+                    <mat-card-content style="margin: 0;">
+                        <img width="60px" height="60px" style="border-radius: 60px;" src="https://th.bing.com/th/id/OIP.9nyTpzPgpvxBs2vYCYxytgHaG0?pid=ImgDet&rs=1" alt="#">
+                    </mat-card-content>
+                    <div style="margin: 10px;">
+                        <div style="font-weight: 500; font-size: 18px;">User Name</div>
+                        <div>Department</div>
+                    </div>
+                </div>
+                <div style="display: flex; align-items: center; flex-direction: row; justify-content: space-between;">
+                    <div>
+                        <h3>Late time</h3>
+                        <div style="font-size: 16px; font-weight: 500;">1</div>
+                    </div>
+                    <div>
+                        <h3>Absence</h3>
+                        <div style="font-size: 16px; font-weight: 500;">0</div>
+                    </div>
+                    <div>
+                        <h3>Attendance</h3>
+                        <div style="font-size: 16px; font-weight: 500;">10</div>
+                    </div>
+                </div>
+            </mat-card>
+            <mat-card style="height: 250px; margin: 15px;">
                 <mat-card-header>
-                    <mat-card-title>
-                        {{card.title}}
-                    </mat-card-title>
+                    <h3 style="font-weight: 500;">Notices</h3>
                 </mat-card-header>
-                <mat-card-content class="dashboard-card-content">
-                    <div>Card Content Here</div>
+                <mat-card-content>
+                    Text content
                 </mat-card-content>
             </mat-card>
-        </mat-grid-tile>
-    </mat-grid-list>
+        </div>
+        <div style="width: 50%;">
+            <mat-card style="height: 87%; margin: 15px;">
+                <mat-card-header>
+                    <h3 style="font-weight: 500;">Events</h3>
+                </mat-card-header>
+                <mat-card-content>
+                    Text content
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
 </div>
