--- a/src/app/component/leave-user/dialog-elements-leave.html
+++ b/src/app/component/leave-user/dialog-elements-leave.html
@@ -32,6 +32,6 @@
     </div>
     <div mat-dialog-actions>
         <button mat-raised-button color="primary" style="background-color: green">APPLY</button>
-        <button mat-raised-button mat-dialog-close color="warn">Cancel</button>
+        <button mat-button mat-dialog-close color="warn">Cancel</button>
     </div>
 </div>
