--- a/src/app/navigation-user/navigation-user.component.html
+++ b/src/app/navigation-user/navigation-user.component.html
@@ -38,16 +38,16 @@
                 <span style="padding-left: 5px;">Attendance</span>
             </a>
             <mat-list style="padding: 0;">
-                <mat-list-item (click)="showSubmenu = !showSubmenu">
+                <mat-list-item (click)="showReport = !showReport">
                     <div style="display: flex; align-items: center;">
                         <mat-icon>bar_chart</mat-icon>
                         <span style="padding-left: 5px;">Reports</span>
                     </div>
                     <button mat-icon-button>
-                    <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubmenu}">arrow_drop_up</mat-icon>
+                    <mat-icon class="menu-button" [ngClass]="{'rotated' : showReport}">arrow_drop_up</mat-icon>
                   </button>
                 </mat-list-item>
-                <div style="padding: 0 0 0 40px;" class="submenu" [ngClass]="{'expanded' : showSubmenu}">
+                <div style="padding: 0 0 0 40px;" class="submenu" [ngClass]="{'expanded' : showReport}">
                     <mat-list-item>
                         <a style="margin:0 -60px 0 -16px; padding: 10px 3.4rem 10px 16px" routerLink="/report/employee" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
