--- a/src/app/component/attendance/attendance.component.html
+++ b/src/app/component/attendance/attendance.component.html
@@ -1,1 +1,201 @@
-<p>attendance works!</p>
+<div>
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Attendance</h1>
+
+    </div>
+    <div style="display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Attendance</h4>
+    </div>
+</div>
+<div style="display: flex; justify-content: center; align-items: center; width: 100%;">
+    <mat-card class="card-layout">
+        <h2>Timesheet<span style="font-weight: 400;"> {{todayWithPipe}} </span> </h2>
+        <mat-card>
+            <div style="font-weight: 400; font-size: 1.5em">Check In at</div>
+            <div style="font-weight: 300; font-size: 1.2em"> {{dateTime}} {{time | date: 'h:mm:ss a'}}</div>
+        </mat-card>
+        <div style="transform: translateX(30%);margin: 1em;  ">
+            <div class="circle">8 hrs</div>
+
+        </div>
+    </mat-card>
+    <mat-card class="card-layout">
+        <h2>Statistics</h2>
+        <mat-card class="statistics">
+            <div>
+                <div class="statistics__time">
+                    <div>Today</div>
+                    <div>7<span> / 8hrs</span></div>
+                </div>
+                <mat-progress-bar mode="determinate" value="90" style="border-radius: 10px;" class="today">
+                </mat-progress-bar>
+            </div>
+        </mat-card>
+        <mat-card class="statistics">
+            <div>
+                <div class="statistics__time">
+                    <div>This Week</div>
+                    <div>7<span> / 8hrs</span></div>
+                </div>
+                <mat-progress-bar mode="determinate" value="30" style="border-radius: 10px;" class="thisweek">
+                </mat-progress-bar>
+            </div>
+        </mat-card>
+        <mat-card class="statistics">
+            <div>
+                <div class="statistics__time">
+                    <div>This Month</div>
+                    <div>7<span> / 8hrs</span></div>
+                </div>
+                <mat-progress-bar mode="determinate" value="40" style="border-radius: 10px;" class="thismonth">
+                </mat-progress-bar>
+            </div>
+        </mat-card>
+
+    </mat-card>
+    <mat-card class="card-layout">
+        <h2>Today Activity</h2>
+        <div class="container__activity">
+
+
+            <!-- active -->
+            <div class="step completed">
+                <div class="v-stepper">
+                    <div class="circle"></div>
+                    <div class="line"></div>
+                </div>
+
+                <div class="content">
+                    <span class="bold"> Check Out at</span>
+                    <div style="display: flex;">
+                        <mat-icon style="font-size: 1.45em;">access_time</mat-icon><span>6:00 PM</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="step active">
+                <div class="v-stepper">
+                    <div class="circle"></div>
+                    <div class="line"></div>
+                </div>
+
+                <div class="content">
+                    <span class="bold"> Check Out at</span>
+                    <div style="display: flex;">
+                        <mat-icon style="font-size: 1.45em;">access_time</mat-icon><span>6:00 PM</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="step completed">
+                <div class="v-stepper">
+                    <div class="circle"></div>
+                    <div class="line"></div>
+                </div>
+
+                <div class="content">
+                    <span class="bold"> Check Out at</span>
+                    <div style="display: flex;">
+                        <mat-icon style="font-size: 1.45em;">access_time</mat-icon><span>6:00 PM</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="step active">
+                <div class="v-stepper">
+                    <div class="circle"></div>
+                    <div class="line"></div>
+                </div>
+
+                <div class="content">
+                    <span class="bold"> Check Out at</span>
+                    <div style="display: flex;">
+                        <mat-icon style="font-size: 1.45em;">access_time</mat-icon><span>6:00 PM</span>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+        </div>
+
+
+
+
+
+    </mat-card>
+
+
+</div>
+<div style=" padding: 2em;">
+    <div style="display: flex;justify-content: space-between; margin:1%; width: 70%">
+        <mat-form-field appearance="outline">
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Choose Month</mat-label>
+            <mat-select>
+                <mat-option value="option">PHP</mat-option>
+                <mat-option value="option">JAVA</mat-option>
+                <mat-option value="option">HR</mat-option>
+            </mat-select>
+
+        </mat-form-field>
+        <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Choose Year</mat-label>
+            <mat-select>
+                <mat-option value="option">PHP</mat-option>
+                <mat-option value="option">JAVA</mat-option>
+                <mat-option value="option">HR</mat-option>
+            </mat-select>
+
+        </mat-form-field>
+        <button mat-raised-button color="primary">Search</button>
+    </div>
+
+    <div class="mat-elevation-z2">
+        <table mat-table [dataSource]="dataSource" style="width: 100%;">
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+
+            <!-- Leave Type Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> LeaveType </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef> From </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+                <th mat-header-cell *matHeaderCellDef> To </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</div>
