--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -5,7 +5,7 @@
 }
 
 .sidenav-container {
-    height: 100%;
+    height: 100vh;
     background-color: #fafafa;
 }
 
@@ -28,7 +28,7 @@
 
 .menu-button {
     transition: 300ms ease-in-out;
-    transform: rotate(0deg);
+    transform: rotate(90deg);
 }
 
 .menu-button.rotated {
@@ -62,6 +62,10 @@
 
 .subsetting.expanded {
     height: 150px;
+}
+
+.mat-list-item {
+    width: 98% !important;
 }
 
 h3,
