--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -18,24 +18,10 @@
 <div style="padding: 2em;">
     <div style="display: flex; justify-content: space-between;align-items: center; flex-wrap: wrap;">
 
-        <mat-card style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
+        <mat-card style="height: 4em;width: 23vw">
             <div style="font-size: 1.5em; font-weight: 500">Total</div>
-            <div style="font-size: 1.5em; font-weight: 400">100</div>
+            <div style="display: flex; justify-content: center; align-items: center; font-size: 1.5em; font-weight: 400; margin-top: 10px;">100</div>
         </mat-card>
-        <mat-card style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
-            <div style="font-size: 1.5em; font-weight: 500">Total</div>
-            <div style="font-size: 1.5em; font-weight: 400">100</div>
-        </mat-card>
-        <mat-card style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
-            <div style="font-size: 1.5em; font-weight: 500">Total</div>
-            <div style="font-size: 1.5em; font-weight: 400">100</div>
-        </mat-card>
-        <mat-card style="display: flex;flex-direction: column; justify-content: space-between; align-items: center;height: 4em;width: 23%;margin: 1%">
-            <div style="font-size: 1.5em; font-weight: 500">Total</div>
-            <div style="font-size: 1.5em; font-weight: 400">100</div>
-        </mat-card>
-
-
     </div>
 
     <!--Table SECTION-->
