--- a/src/app/dashboard-user/dashboard-user.component.html
+++ b/src/app/dashboard-user/dashboard-user.component.html
@@ -1,7 +1,7 @@
 <div>
     <h1 class="mat-h1">Dashboard</h1>
 
-    <div style="height: auto; margin: 15px;">
+    <mat-card style="height: auto; margin: 15px;">
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <div class="mat-h2" style="margin-top: 10px;">Welcome USER
                 <div>
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </mat-card>
     <div style="display: flex; flex-direction: row;">
         <div style="width: 50%;">
             <mat-card style="height: auto; margin: 15px;">
