--- a/src/app/navigation-user/navigation-user.component.html
+++ b/src/app/navigation-user/navigation-user.component.html
@@ -33,7 +33,7 @@
                     </mat-list-item>
                 </div>
             </mat-list>
-            <a mat-list-item routerLink="/attendance" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <a mat-list-item routerLink="/account/attendance" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <mat-icon>date_range</mat-icon>
                 <span style="padding-left: 5px;">Attendance</span>
             </a>
