--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -1,1 +1,126 @@
-<p>employee-leave works!</p>
+<div style="overflow-y: hidden;">
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Leave</h1>
+    </div>
+    <div style=" display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Leave </h4>
+    </div>
+</div>
+<div style="margin: 0.8em">
+
+    <div style="display: flex; justify-content:center; align-items: center;  ">
+
+        <mat-card
+            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+            <div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
+                <div style="font-size: 1.2em">02</div>
+            </div>
+            <div>
+                <button style="width: 5em;height:5em;" mat-fab color="primary"
+                    aria-label="Example icon button with a delete icon">
+                    <mat-icon style="transform: scale(1.4);">people</mat-icon>
+                </button>
+            </div>
+
+
+        </mat-card>
+        <mat-card
+            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+            <div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Leave Department</div>
+                <div style="font-size: 1.2em">02</div>
+            </div>
+            <div>
+                <button style="width: 5em;height:5em;" mat-fab color="primary"
+                    aria-label="Example icon button with a delete icon">
+                    <mat-icon style="transform: scale(1.4);">apps</mat-icon>
+                </button>
+            </div>
+
+
+        </mat-card>
+        <mat-card
+            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+            <div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Leave Type</div>
+                <div style="font-size: 1.2em">02</div>
+            </div>
+            <div>
+                <button style="width: 5em;height:5em;" mat-fab color="primary"
+                    aria-label="Example icon button with a delete icon">
+                    <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
+                </button>
+            </div>
+
+
+        </mat-card>
+
+    </div>
+
+    <!--Table section-->
+    <div style="margin-top: 1em; margin-bottom: -1em;">
+        <h3>Latest Leave Application</h3>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section">
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef>No</th>
+            <td mat-cell *matCellDef="let element">{{element.position}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
+            <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef>Posting Date</th>
+            <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-form-field style="width: 6em">
+                    <mat-label></mat-label>
+                    <mat-select value="option1">
+                        <mat-option value="option1">Pending</mat-option>
+                        <mat-option value="option2">Approved</mat-option>
+                        <mat-option value="option3">Reject</mat-option>
+                    </mat-select>
+                </mat-form-field>
+
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon color="primary">edit</mat-icon>
+                <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+        </tr>
+
+
+
+    </table>
+
+
+
+
+</div>
