--- a/src/app/component/employee-detail/employee-detail.component.html
+++ b/src/app/component/employee-detail/employee-detail.component.html
@@ -11,7 +11,7 @@
             <div>
                 <img width="100px" height="100px" style="border-radius: 100px;" src="https://th.bing.com/th/id/OIP.9nyTpzPgpvxBs2vYCYxytgHaG0?pid=ImgDet&rs=1" alt="#">
             </div>
-            <div>
+            <div style="margin-left: 10px;">
                 <h3 style="font-weight: 600;">Employee 1</h3>
                 <h4>Name team</h4>
                 <h4>Web developer</h4>
@@ -45,17 +45,17 @@
         </div>
     </mat-card>
     <ng-container *ngIf="(asyncTabs | async) === null">
-        Loading tabs...
+        <img height="50px" width="60px" src="https://c.tenor.com/k3VfwdRd6cEAAAAi/loading-load.gif" alt="">
     </ng-container>
 
     <mat-tab-group>
         <mat-tab *ngFor="let tab of asyncTabs | async">
             <ng-template mat-tab-label style="color: red;">{{tab.label}}</ng-template>
             <div *ngIf="tab.content === '1'">
-                <app-attendance></app-attendance>
+                <app-profile-user></app-profile-user>
             </div>
             <div *ngIf="tab.content === '2'">
-                <app-employee></app-employee>
+                <app-project-user></app-project-user>
             </div>
         </mat-tab>
     </mat-tab-group>
