--- a/src/app/component/employee-detail/employee-detail.component.html
+++ b/src/app/component/employee-detail/employee-detail.component.html
@@ -26,22 +26,28 @@
             </div>
         </div>
         <div style="display: flex; flex-direction: column; width: 50%; padding: 0 20px;">
-            <div style="display: flex; flex-direction: row;">
-                <h4 style="font-weight: 600;">Date of join : </h4>
-                <h4>10-Jan-2022</h4>
-            </div>
-            <div style="display: flex; flex-direction: row;">
-                <h4 style="font-weight: 600;">Date of join : </h4>
-                <h4>10-Jan-2022</h4>
-            </div>
-            <div style="display: flex; flex-direction: row;">
-                <h4 style="font-weight: 600;">Date of join : </h4>
-                <h4>10-Jan-2022</h4>
-            </div>
-            <div style="display: flex; flex-direction: row;">
-                <h4 style="font-weight: 600;">Date of join : </h4>
-                <h4>10-Jan-2022</h4>
-            </div>
+            <table>
+                <tr>
+                    <td>Phone</td>
+                    <td>01232433</td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td>employee1@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Birthday</td>
+                    <td>01-Jan-2022</td>
+                </tr>
+                <tr>
+                    <td>Address</td>
+                    <td>Phom Penh, Cambodia</td>
+                </tr>
+                <tr>
+                    <td>Gender</td>
+                    <td>Male</td>
+                </tr>
+            </table>
         </div>
     </mat-card>
     <ng-container *ngIf="(asyncTabs | async) === null">
