--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -106,7 +106,8 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon color="primary">edit</mat-icon>
+                <mat-icon color="primary" style="color: green;">remove_red_eye</mat-icon>
+                <mat-icon color="primary" style="margin-left: 5px;">edit</mat-icon>
                 <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
             </td>
         </ng-container>
