--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -107,6 +107,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
+                <mat-icon color="primary">remove_red_eye</mat-icon>
                 <mat-icon color="primary">edit</mat-icon>
                 <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
             </td>
